--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="dist/bootstrap-utilities.min.css" />
     <link rel="stylesheet" href="dist/theme/cdpweek.css" id="theme" />
     <link rel="stylesheet" href="plugin/highlight/monokai.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400&display=swap" rel="stylesheet" />
   </head>
 
   <body>
