remove unused slides

--- a/index.html
+++ b/index.html
@@ -164,46 +164,13 @@
         </section>
 
         <section>
-          <h2>What about tracking plans with complex rules?</h2>
-          <ul>
-            <li>Propery names fitting regex patterns</li>
-            <li>Global rules that apply to all events</li>
-            <li>Allow freeform values for some properties</li>
-          </ul>
+          <h2>Thank you</h2>
+          <p>
+            See you in #protocols in the Segment community Slack!
+          </p>
         </section>
 
-        <section>
-          <h2>Same solution as with code - use automated testing!</h2>
-          <p>Ensure known event payloads are allowed and blocked as expected after each change</p>
-        </section>
 
-        <section>
-          <h2>Why is automated testing beneficial for tracking plans?</h2>
-
-          <div class="d-flex">
-            <div class="text-start">
-              <h4>Tracking plans tell us:</h4>
-              <ul>
-                <li>Event was unplanned</li>
-                <li>Event property was unplanned</li>
-                <li>Event property was a schema violation</li>
-                <li>Common/global event rule was violated</li>
-              </ul>
-            </div>
-            <div></div>
-            <div class="text-start">
-              <h4>Source settings tell us:</h4>
-              <ul>
-                <li>Block the entire event</li>
-                <li>Allow event but omit offending property(s)</li>
-                <li>Do nothing - allow entier event</li>
-              </ul>
-            </div>
-          </div>
-          <p>When combined with the event payload, this is too many permutations for manual testing!</p>
-        </section>
-      </div>
-    </div>
 
     <script src="dist/reveal.js"></script>
     <script src="plugin/zoom/zoom.js"></script>
