update ending page

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         </section>
 
         <section>
-          <h2>Thank you</h2>
+          <h2>Thank you 🙂</h2>
           <p>
             See you in #protocols in the Segment community Slack!
           </p>
