update demo page

--- a/index.html
+++ b/index.html
@@ -151,12 +151,12 @@
         </section>
 
         <section class="r-stretch">
-          Event yaml files are "compiled" into Segment tracking plans and documentation
+          <p>Documentation and tracking plans built from yaml files</p>
           <img src="assets/build.svg" alt="Build diagram" class="m-0" />
         </section>
 
         <section>
-          <h2><a href="https://github.com/hmedney-segment">Schema management demo</a></h2>
+          <h1><a href="https://github.com/hmedney-segment">Demo</a></h1>
           <div style="margin-top: 5rem">
             Follow along in<br />
             <a href="https://github.com/hmedney-segment/schema">https://github.com/hmedney-segment/schema</a>
@@ -180,7 +180,7 @@
     <script src="plugin/highlight/highlight.js"></script>
     <script>
       Reveal.initialize({
-        controls: true,
+        controls: false,
         progress: false,
         transition: 'none',
         backgroundTransition: 'none',
