--- a/index.html
+++ b/index.html
@@ -47,12 +47,14 @@
 
         <section data-markdown>
           <script type="text/template">
-            ## How do we use Segment?
+            ## IBM has a great patnership with Segment!
+            
+            - Repeater Destination
+            - Tag Injector Destination
+            - Advanced section on Schema Settings
+            - patternProperties in Protocols
+            - Synapse 2019 VIP
 
-            - Product analytics
-            - Journeys
-            - Nurture
-            - Consumption
           </script>
         </section>
 
