add usage slide back

--- a/index.html
+++ b/index.html
@@ -45,6 +45,17 @@
           </div>
         </section>
 
+        <section data-markdown>
+          <script type="text/template">
+            ## How do we use Segment?
+
+            - Product analytics
+            - Journeys
+            - Nurture
+            - Consumption
+          </script>
+        </section>
+
         <section data-background-color="white" class="r-stretch" data-transition="none">
           <img src="assets/flow1.svg" alt="Build diagram" class="m-0" />
         </section>
