update job title

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                 <strong>Hunter Medney</strong>
               </div>
               <div class="mt-3">
-                Lead Architect
+                Chief Architect
                 <br />
-                Digital Growth @ IBM
+                Growth and Ecosystem Data Services
                 <br />
                 LinkedIn: <a href="https://www.linkedin.com/in/hmedney/">hmedney</a>
               </div>
@@ -169,8 +169,6 @@
             See you in #protocols in the Segment community Slack!
           </p>
         </section>
-
-
 
     <script src="dist/reveal.js"></script>
     <script src="plugin/zoom/zoom.js"></script>
