--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                 <strong>Hunter Medney</strong>
               </div>
               <div class="mt-3">
-                Chief Architect
+                Lead Architect
                 <br />
-                Growth and Ecosystem Data Services
+                Growth Platforms
                 <br />
                 LinkedIn: <a href="https://www.linkedin.com/in/hmedney/">hmedney</a>
               </div>
