draft slide on giveback

--- a/index.html
+++ b/index.html
@@ -45,6 +45,17 @@
           </div>
         </section>
 
+        <!-- <section data-markdown>
+          <script type="text/template">
+            ## IBM has influenced:
+
+            - Destinations
+            - Workspace features
+            - Protocols features
+            - UX research
+          </script>
+        </section> -->
+
         <section data-markdown>
           <script type="text/template">
             ## How do we use Segment?
